# tooldb

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
decisions/: 0001-mcp-server-in-src.md  0002-auto-register-mcp-and-dotenv.md  0003-production-readiness-assessment.md
mcp_server/: server.py
skills/: SKILL.md  tool-search.skill.md
src/mcp_server/: server.py
src/tooldb/: __init__.py  cascade.py  cli.py  invariants.py  invoker.py  logging.py  models.py
src/tooldb/adapters/: registry.py  wrapper_generator.py
src/tooldb/assessment/: __init__.py  github_signals.py  license_classifier.py  osv_client.py  production_readiness.py  safety.py
src/tooldb/benchmark/: runner.py  specs.py
src/tooldb/db/: cache.py  migrations.py  schema.sql
src/tooldb/discovery/: base.py  github.py  public_apis.py  web.py
tests/: conftest.py  test_adapters.py  test_assessment.py  test_benchmark.py  test_cache.py  test_cascade.py  test_cli.py  test_discovery_github.py  test_discovery_public_apis.py  test_github_signals.py  test_invoker.py  test_migration_v2.py  test_osv_client.py  test_properties.py  test_recipes.py  test_safety.py
tests/integration/: test_cascade_real.py  test_github_real.py  test_mcp_e2e.py  test_public_apis_real.py
